# substrate-did-template

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/test-pallet/: Cargo.toml
pallets/test-pallet/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
